--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.6.1"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pre-commit = "^2.5.1"
+pylint = "^2.5.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
