--- a/.github/workflows/validate_commit.yml
+++ b/.github/workflows/validate_commit.yml
@@ -50,3 +50,30 @@ jobs:
       run: |
         source $HOME/.poetry/env
         poetry run pytest
+
+  coverege:
+    name: Coverage
+    runs-on: ubuntu-latest
+    needs: tests
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip codecov
+        curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | POETRY_PREVIEW=1 python
+        source $HOME/.poetry/env
+        poetry install -v
+    - name: Coverage
+      run: |
+        source $HOME/.poetry/env
+        poetry run pytest --cov=pass_wrapper tests/
+    - name: Push coverage
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      run: |
+        codecov
