--- a/.github/workflows/validate_commit.yml
+++ b/.github/workflows/validate_commit.yml
@@ -65,13 +65,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip codecov
-        curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | POETRY_PREVIEW=1 python
+        curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python
         source $HOME/.poetry/env
         poetry install -v
     - name: Coverage
       run: |
         source $HOME/.poetry/env
-        poetry run pytest --cov=pass_wrapper tests/
+        poetry run pytest --cov=pass_wrapper
     - name: Push coverage
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
