--- a/.github/workflows/validate_commit.yml
+++ b/.github/workflows/validate_commit.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Tests
       run: |
         source $HOME/.poetry/env
-        poetry run pytest
+        poetry run pytest tests/
 
   coverege:
     name: Coverage
@@ -71,7 +71,7 @@ jobs:
     - name: Coverage
       run: |
         source $HOME/.poetry/env
-        poetry run pytest --cov=pass_wrapper
+        poetry run pytest --cov=pass_wrapper --cov-report=xml tests/
     - name: Push coverage
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
